# Rust_Apps

./: README.md
appletv_remote/: Cargo.toml  build.rs
appletv_remote/src/: main.rs
appletv_remote/src/protos/: CryptoPairingMessage.proto  DeviceInfoMessage.proto  ProtocolMessage.proto
my_bevy_game/: Cargo.toml
my_bevy_game/assets/maps/: Untitled.ldtk
my_bevy_game/ldtk/: Physics_Map.ldtk  Top_Down.ldtk  Untitled.ldtk
my_bevy_game/ldtk/Untitled/backups/: Untitled___2021-07-13__07-58-24__crash.backup.ldtk
my_bevy_game/src/: animation.rs  collisons.rs  main.rs  map.rs  physics.rs  player.rs
