[package]
name = "my_bevy_game"
version = "0.1.0"
authors = ["Chris Kellar <ckellar33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_ldtk = "0.5.0"
bevy_retrograde = "0.1.0"